--- a/paper/example_article.bib
+++ b/paper/example_article.bib
@@ -1,12 +1,22 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Frederick Solt at 2019-01-21 20:22:15 -0600 
+%% Created for Frederick Solt at 2019-01-22 05:20:03 -0600 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@misc{Solt2015c,
+	Author = {Solt, Frederick and Hu, Yue},
+	Date-Added = {2019-01-21 20:54:40 -0600},
+	Date-Modified = {2019-01-21 20:54:40 -0600},
+	Howpublished = {Available at the Comprehensive R Archive Network (CRAN)},
+	Title = {{dotwhisker}: Dot-and-Whisker Plots of Regression Results},
+	Url = {http://CRAN.R-project.org/package=dotwhisker},
+	Year = {2015},
+	Bdsk-Url-1 = {http://CRAN.R-project.org/package=interplot}}
 
 @article{Herndon2014,
 	Abstract = {We replicate Reinhart and Rogoff (2010A and 2010B) and find that selective exclusion of available data, coding errors and inappropriate weighting of summary statistics lead to serious miscalculations that inaccurately represent the relationship between public debt and GDP growth among 20 advanced economies. Over 1946--2009, countries with public debt/GDP ratios above 90% averaged 2.2% real annual GDP growth, not −0.1% as published. The published results for (i) median GDP growth rates for the 1946--2009 period and (ii) mean and median GDP growth figures over 1790--2009 are all distorted by similar methodological errors, although the magnitudes of the distortions are somewhat smaller than with the mean figures for 1946--2009. Contrary to Reinhart and Rogoff's broader contentions, both mean and median GDP growth when public debt levels exceed 90% of GDP are not dramatically different from when the public debt/GDP ratios are lower. The relationship between public debt and GDP growth varies significantly by period and country. Our overall evidence refutes RR's claim that public debt/GDP ratios above 90% consistently reduce a country's GDP growth.},
